force-app/main/default/objects/NI_PFyre_AgentEvents__c/NI_PFyre_AgentEvents__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-006848</description>
    <label>NI_PFyre_AgentEvents</label>
    <nameField>
        <displayFormat>PAEID{00000000}</displayFormat>
        <label>PF Event Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NI_PFyre_AgentEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>