force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/ACDCount__c.field-meta.xml
<CustomField>
    <fullName>ACDCount__c</fullName>
    <label>ACD Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>