force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/ACDHoldDuration__c.field-meta.xml
<CustomField>
    <fullName>ACDHoldDuration__c</fullName>
    <label>ACD Hold Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>