force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/DNDCount__c.field-meta.xml
<CustomField>
    <fullName>DNDCount__c</fullName>
    <label>DND Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>