force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>Event Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>