force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/FKTimeInterval__c.field-meta.xml
<CustomField>
    <fullName>FKTimeInterval__c</fullName>
    <label>FK Time Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>