force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/HoldACDCount__c.field-meta.xml
<CustomField>
    <fullName>HoldACDCount__c</fullName>
    <label>Hold ACD Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>