force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/HoldOutCount__c.field-meta.xml
<CustomField>
    <fullName>HoldOutCount__c</fullName>
    <label>Hold Out Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>