force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/MakeBusyCount__c.field-meta.xml
<CustomField>
    <fullName>MakeBusyCount__c</fullName>
    <label>Make Busy Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>