force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/NonACDDuration__c.field-meta.xml
<CustomField>
    <fullName>NonACDDuration__c</fullName>
    <label>Non ACD Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>