force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/OutCount__c.field-meta.xml
<CustomField>
    <fullName>OutCount__c</fullName>
    <label>Out Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>