force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/OutDuration__c.field-meta.xml
<CustomField>
    <fullName>OutDuration__c</fullName>
    <label>Out Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>