force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/OutHoldDuration__c.field-meta.xml
<CustomField>
    <fullName>OutHoldDuration__c</fullName>
    <label>Out Hold Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>