force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/Saleforce_User__c.field-meta.xml
<CustomField>
    <fullName>Saleforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Saleforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NI_PFyre_AgentEvents</relationshipName>
    <type>Lookup</type>
</CustomField>