force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/Snapshot_Day__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Day__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Snapshot Day</label>
    <type>Date</type>
</CustomField>