force-app/main/default/objects/NI_PFyre_AgentEvents__c/fields/User_Team__c.field-meta.xml
<CustomField>
    <fullName>User_Team__c</fullName>
    <formula>TEXT(Saleforce_User__r.UserTeam__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Team</label>
    <type>Text</type>
</CustomField>