force-app/main/default/objects/NI_PFyre_AgentEvents__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>User_Team__c</columns>
    <columns>Saleforce_User__c</columns>
    <columns>LoginTime__c</columns>
    <columns>LogoutTime__c</columns>
    <columns>ACDCount__c</columns>
    <columns>NonACDCount__c</columns>
    <columns>OutCount__c</columns>
    <columns>MakeBusyCount__c</columns>
    <columns>MakeBusyDuration__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>