force-app/main/default/objects/NI_PFyre_AgentEvents__c/listViews/Carina_Haley_Only.listView-meta.xml
<ListView>
    <fullName>Carina_Haley_Only</fullName>
    <columns>Snapshot_Day__c</columns>
    <columns>NAME</columns>
    <columns>Saleforce_User__c</columns>
    <columns>LoginTime__c</columns>
    <columns>LogoutTime__c</columns>
    <columns>ACDCount__c</columns>
    <columns>NonACDCount__c</columns>
    <columns>OutCount__c</columns>
    <columns>MakeBusyCount__c</columns>
    <columns>MakeBusyDuration__c</columns>
    <columns>User_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Saleforce_User__c</field>
        <operation>equals</operation>
        <value>Jim Finitsis</value>
    </filters>
    <label>Carina Haley Only</label>
</ListView>