force-app/main/default/objects/NI_PFyre_AgentEvents__c/listViews/SPT_US_Lead_Analyst.listView-meta.xml
<ListView>
    <fullName>SPT_US_Lead_Analyst</fullName>
    <columns>NAME</columns>
    <columns>Saleforce_User__c</columns>
    <columns>LoginTime__c</columns>
    <columns>LogoutTime__c</columns>
    <columns>ACDCount__c</columns>
    <columns>NonACDCount__c</columns>
    <columns>OutCount__c</columns>
    <columns>MakeBusyCount__c</columns>
    <columns>MakeBusyDuration__c</columns>
    <columns>User_Team__c</columns>
    <columns>Snapshot_Day__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Team__c</field>
        <operation>equals</operation>
        <value>SPT US Lead Analyst</value>
    </filters>
    <label>SPT US Lead Analyst</label>
</ListView>